k3s/llm-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-api-deployment
  namespace: production
  labels:
    app: llm-api
spec:
  selector:
    matchLabels:
      app: llm-api
  template:
    metadata:
      labels:
        app: llm-api
    spec:
      containers:
        - name: llm-api
          image: ghcr.io/olli-suoniemi/qa-project/llm-api:latest
          ports:
            - containerPort: 7000
