k3s/qa-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-ui-deployment
  namespace: production
  labels:
    app: qa-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa-ui
  template:
    metadata:
      labels:
        app: qa-ui
    spec:
      containers:
        - name: qa-ui
          image: ghcr.io/olli-suoniemi/qa-project/qa-ui:latest
          ports:
            - containerPort: 3000
