k3s/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deployment
  namespace: qa
  labels:
    app: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
        - name: websocket
          image: ghcr.io/olli-suoniemi/qa-project/websocket:latest
          ports:
            - containerPort: 7788
