k3s/qa-api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-api-deployment
  namespace: production
  labels:
    app: qa-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa-api
  template:
    metadata:
      labels:
        app: qa-api
    spec:
      containers:
        - name: qa-api
          image: ghcr.io/olli-suoniemi/qa-project/qa-api:latest
          ports:
            - containerPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: qa-api-service
  namespace: production
spec:
  ports:
    - port: 7777
      targetPort: 7777
      protocol: TCP
  selector:
    app: qa-api
