k3s/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: production
spec:
  ports:
    - port: 7788
      targetPort: 7788
      protocol: TCP
  selector:
    app: websocket
