k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-qa-ui
  namespace: qa
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - qa.olli.codes
      secretName: qa-olli-codes-tls  # Unique TLS secret for the subdomain
  rules:
    - host: qa.olli.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qa-ui-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-qa-api
  namespace: qa
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "20"
    traefik.ingress.kubernetes.io/router.middlewares: qa-api-strip@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - qa.olli.codes
      secretName: qa-olli-codes-tls
  rules:
  - host: qa.olli.codes
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: qa-api-service
            port:
              number: 7777
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-strip
  namespace: qa
spec:
  stripPrefix:
    prefixes:
      - /api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websocket
  namespace: qa
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "30"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - qa.olli.codes
      secretName: qa-olli-codes-tls
  rules:
    - host: qa.olli.codes
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 7788
